Fixed main padding on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -194,7 +194,7 @@
         }
 
         main{
-            margin-top: 100px;
+            padding-top: 100px;
         }
 
         .intro{
